fixed the alignment of the learn about section and the newsletter

--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,6 @@ body {
 }
 
 .container {
-    display: flex;
-    /* flex-wrap: wrap; */
-    justify-content: space-between;
-    align-items: center;
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
@@ -20,6 +16,13 @@ body {
 header{
     background-color: white;
     margin: 40px auto;
+}
+
+header .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
  h1{
@@ -48,8 +51,11 @@ nav ul li a:hover{
 
 .overview-hero{
     background-color:#E2E8F0;
+}
+
+.overview-hero .container{
     display: flex;
-    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -98,6 +104,12 @@ nav ul li a:hover{
     padding: 80px;
 }
 
+.testing .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .testing-description {
    /* width: 20%; */
    text-align: left;
@@ -114,12 +126,83 @@ nav ul li a:hover{
     width: 250px;
     border-radius: 5px;
     padding: 10px;
-    margin: 0;
+    margin-top: 40px;
 }
 
-.btn{
+.testing .btn{
     text-decoration: none;
     color: white;
     text-transform: uppercase;
 
 }
+.testing .cta:hover{
+    background-color: #296d45;
+}
+
+
+.stories img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: fill;
+}
+
+
+.newsletter{
+    background-color: #48BB78;
+    color: white;
+    text-align: left;
+    padding: 20px;
+}
+
+
+.newsletter .container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+    
+
+h3,p{
+    padding:5px;
+    margin:0;
+}
+
+form {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+
+.form-group input[type="email"] {
+    width: 300px;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 0;
+}
+.newsletter .btn{
+    background-color:#5A67D8 ;
+    color: white;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 5px;
+    height: 60px;
+    width: 150px;
+
+}
+
+.newsletter .btn:hover {
+    background-color: #25319c;
+}
+
+footer{
+    background-color: #4A5568;
+    align-items: center;
+    padding: 20px;
+    color: white;
+}
+
